--- a/static/css/style.css
+++ b/static/css/style.css
@@ -170,6 +170,7 @@ a {
   color: var(--color-main);
   background: transparent;
   border: 2px solid var(--color-main);
+  margin-bottom: 1rem;
 }
 
 .action-button {
@@ -756,7 +757,7 @@ a {
 @media screen and (max-width: 780px) {
   .books {
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
   }
   .roomListRoom {
     display: block;
@@ -1007,7 +1008,10 @@ a {
 }
 
 .profile__about {
-  margin-top: 2rem;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
 }
 
 .profile__about h3 {
